--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^12.6.0",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
