--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.1.0",
     "@tailwindcss/vite": "^4.1.18",
     "date-fns": "^4.1.0",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.27.1",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-datepicker": "^9.1.0",
