--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^12.6.0",
     "framer-motion": "^12.27.1",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-datepicker": "^9.1.0",
